force-app/main/default/objects/Partner__c/Partner__c.object-meta.xml
<CustomObject>
    <label>Partner</label>
    <nameField>
        <displayFormat>APID-{0}</displayFormat>
        <label>Account Partner ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Partners</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>