force-app/main/default/objects/Partner__c/fields/Customer_Facility_City__c.field-meta.xml
<CustomField>
    <fullName>Customer_Facility_City__c</fullName>
    <formula>Customer__r.BillingCity</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Facility City</label>
    <type>Text</type>
</CustomField>