force-app/main/default/objects/Partner__c/fields/Customer_Facility_State__c.field-meta.xml
<CustomField>
    <fullName>Customer_Facility_State__c</fullName>
    <formula>Customer__r.BillingState</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Facility State</label>
    <type>Text</type>
</CustomField>