force-app/main/default/objects/Partner__c/fields/Customer_Market_Segment__c.field-meta.xml
<CustomField>
    <fullName>Customer_Market_Segment__c</fullName>
    <formula>Customer__r.Market_Segments__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Market Segment</label>
    <type>Text</type>
</CustomField>