force-app/main/default/objects/Partner__c/fields/Customer_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Customer_Record_Type__c</fullName>
    <formula>Customer__r.RecordType.DeveloperName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Record Type</label>
    <type>Text</type>
</CustomField>