force-app/main/default/objects/Partner__c/fields/Partner_Facility_City__c.field-meta.xml
<CustomField>
    <fullName>Partner_Facility_City__c</fullName>
    <formula>Partner__r.ShippingCity</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Facility City</label>
    <type>Text</type>
</CustomField>